# django_rest

./: .gitignore  docker-compose.yml  manage.py  pyproject.toml
app/: settings.py  urls.py
app/libs/: abstract_model.py  cache_prefix.py
authentication/: models.py  serializers.py  urls.py  views.py
libs/common/model/: abstract_model.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
