[tool.poetry]
name = "django-rest"
version = "0.1.0"
description = ""
authors = ["Gwon Min Je <62048410+gwon713@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_rest"}]

[tool.poetry.dependencies]
python = "3.9.9"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
django-mysql = "^4.7.1"
django-redis = "^5.2.0"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
